--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    background: white;
+    background: #faf5ed;
     font-size: 1.3em;
     padding:0 3%;
 }
@@ -45,9 +45,12 @@ li {
 }
 
 pre.sourceCode {
-    background-color: #a0522d;
+    background-color: #222222;
     color: #eee;
     padding: .5em 1em;
+    line-height: 1.5;
+    font-size: .8em;
+    overflow-x: auto;
 }
 
 @media(min-width: 50rem ) {
